# typewriter

./: .gitignore  .oxfmtrc.json  .remanso.json  CHANGELOG.md  CLAUDE.md  CONTEXT.md  GLOSSARY.md  MEMORY_AUDIT.md  README.md  cliff.installer.toml  cliff.toml  package.json  pnpm-lock.yaml
.github/workflows/: installer-release.yml
.zed/: settings.json
app/src/: lib.rs  ports.rs  render.rs  runtime.rs
app/src/runtime/: tests.rs
conf/src/: lib.rs
display/: Cargo.toml
display/examples/: font_preview.rs
display/src/: glyphs.rs  lib.rs
display/src/fonts/: courier_prime.rs  courier_prime_10x20.raw  hack.rs  hack_10x20.raw  ibm_plex_mono.rs  ibm_plex_mono_10x20.raw  mod.rs  space_mono.rs  space_mono_10x20.raw
display/src/typo/: mod.rs  sprites.rs
display/tools/: typogen.py
docs/: README.md  adr.md  hardware.md  house-vs-product.md  macroplan.md  qfd-budget.md  qfd-changelog.md  qfd-house-1.md  qfd-house-2.md  qfd-houses-3-4.md  qfd-perception.md  qfd-tradeoffs.md  qfd.md  quality-house-empty.md  quality-house.md  roadmap.md  spikes.md  testing.md  typoena-snippets.md  typoena-toml.md  v0.1-mvp-product.md  v0.1-mvp-technical.md  v0.10-battery-and-sleep.md  v0.2-navigation.md  v0.2.5-international-input.md  v0.3-editing.md  v0.4-visual-and-ex.md  v0.5-palette-and-multi-file.md  v0.6-markdown.md  v0.7-search-and-git.md  v0.7.5-focus-mode.md  v0.7.6-reboot.md  v0.7.7-inbox-notes.md  v0.8-battery-and-sleep.md  v0.9-onboarding-wizard.md  v0.9-robustness.md  v1.0-polish.md  v1.x-stretch.md
docs/kaizen/: README.md  cold-boot-time.md  real-repo-sync.md
docs/notes/: README.md  boot-time-budget.md  ctrl-g-perceived-latency.md  epd-waveform-lut-deep-dive.md  epd-waveforms.md  git-sync-images-and-repo-size.md  sync-commit-handoff.md  sync-latency.md
docs/postmortems/: 2026-07-05-spike3-sd-cmd59.md  2026-07-05-spike7-gix-https-push.md  2026-07-11-editor-freeze-spi-dma-oom-during-sync.md  2026-07-16-gate-scan-spike-refuted.md  2026-07-16-partial-refresh-bank-toggle.md  2026-07-20-wizard-wifi-loadprohibited.md  README.md
docs/tradeoff-curves/: README.md  epd-refresh-latency.md  sync-commit-staging.md  wifi-auto-sync.md
editor/: Cargo.toml
editor/src/: buffers.rs  hud.rs  lib.rs  palette.rs  prefs.rs  render.rs
editor/src/tests/: buffers.rs  commands.rs  companion.rs  dot_repeat.rs  editing.rs  focus.rs  inbox.rs  mod.rs  palette.rs  prefs.rs  pull.rs  render.rs  search.rs  snippets.rs  undo.rs  utf8.rs  visual.rs
firmware/: .env.example  Cargo.toml  README.md  build.rs  justfile  partitions-ota.csv  partitions.csv  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/components/libgit2/: CMakeLists.txt  esp_map.c  esp_stubs.c
firmware/docs/: bench-qc.md
firmware/reference/gdey0579t93-fp-lut/: Display_EPD_W21.c  Display_EPD_W21.h  Display_EPD_W21_spi.c  Display_EPD_W21_spi.h  README.md  main.c
firmware/snippets-catalog/: prose.json  structure.json  symbols.json
firmware/src/: adapters.rs  editor.rs  epd.rs  git_sync.rs  lib.rs  main.rs  net.rs  persistence.rs  ui.rs  usb_kbd.rs  wizard_io.rs
firmware/src/drivers/: screen_epd.rs  system_esp.rs
firmware/src/infrastructure/: file_index.rs  mod.rs  net.rs  ota.rs  storage_sd.rs  sync_git.rs  sync_null.rs  wizard_io.rs
hardware/case/: README.md  concept.html  render.sh  typoena-case.scad
installer/: Cargo.toml  DESIGN.md  justfile
installer/src/: app.rs  auth.rs  config.rs  main.rs  sdcard.rs  ui.rs  wipe.rs
keymap/: Cargo.toml
keymap/src/: lib.rs
spikes/spike7-git-push/: .env.example  Cargo.toml  README.md
spikes/spike7-git-push/src/: main.rs
wizard/: Cargo.toml
wizard/src/: github.rs  lib.rs  tests.rs
