[package]
name = "firmware"
version = "0.7.7"
authors = ["Julien Calixte <juliencalixte@gmail.com>"]
edition = "2024"
resolver = "2"
rust-version = "1.85"
# Declare every binary explicitly so a spike program under src/bin/ doesn't get
# an auto-discovered target with the default test harness (which trips up
# rust-analyzer — see README "harness = false" note).
autobins = false

# Shared library surface (currently just resilient Wi-Fi bring-up in
# `firmware::net`), reused by the editor bin and the spike bins so the connect
# retry logic lives in exactly one place rather than being copied per binary.
[lib]
name = "firmware"
path = "src/lib.rs"

[[bin]]
name = "firmware"
path = "src/main.rs"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors
# The product firmware is always the full build (git `:gp`/`:gl` + `:update` OTA
# + onboarding wizard). `full` is off by default so a bare `cargo build` and the
# libgit2-free bench bins skip it; `just build`/`flash` pass `--features full`.
required-features = ["full"]

# Spike 6 — Wi-Fi + TLS. Standalone bench program, kept separate from the
# editor firmware. Flash with `just flash-wifi`.
[[bin]]
name = "wifi_tls"
path = "src/bin/wifi_tls.rs"
harness = false

# SD/FAT primitive-op micro-benchmark — attributes the ~700 ms/loose-object write
# floor (see docs/tradeoff-curves/sync-commit-staging.md). Pure SD, no `full` feature.
# Flash with `just flash-bench`.
[[bin]]
name = "sd_bench"
path = "src/bin/sd_bench.rs"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"
[patch.crates-io]
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys.git" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git" }

[features]
# The full product build. The `firmware` bin `required-features` it, so the
# shipping firmware always has it; it stays OFF by default only so a bare
# `cargo build` and the standalone bench bins (`sd_bench`, `wifi_tls`) build
# WITHOUT libgit2 (editor + EPD + USB + SD). `just build`/`flash` pass
# `--features full`. It turns on the `net` thread (git `:gp`/`:gl` + `:update`
# OTA), the onboarding wizard, and the `#[cfg(feature = "full")]` `net`/`ota`/
# `wizard_io` modules in the lib. It also (a) pulls the git2 safe API and (b)
# builds libgit2 as an esp-idf component (firmware/components/libgit2/) with
# mbedTLS — but ONLY when the justfile also sets LIBGIT2_SRC (the full recipes
# do; the bench recipes don't, so the component is an empty no-op). git2/
# libgit2-sys run in system mode (LIBGIT2_NO_VENDOR=1) purely for the Rust
# bindings, with default features off to avoid dragging in openssl-sys/libssh2-sys.
full = ["dep:git2", "dep:libgit2-sys", "dep:wizard"]

[dependencies]
anyhow = "1"
log = "0.4"
# The hardware-abstraction port traits (Screen, Keyboard). The drivers below
# implement them (epd -> Screen, usb_kbd -> Keyboard) and the render engine
# depends on the traits, not the concrete types. Pure, host-buildable. See ../hal.
hal = { path = "../hal" }
# Pure HID decode (Key type + edge-detecting Decoder), split out so it is
# host-testable off the xtensa target. See ../keymap and MEMORY_AUDIT.md.
keymap = { path = "../keymap" }
# Editor core (buffer, motions, edits, layout/render) and the panel framebuffer,
# extracted from src/editor.rs and src/epd.rs so `cargo test` can exercise them
# off-device. The firmware links them; the host tests live in each crate.
editor = { path = "../editor" }
display = { path = "../display" }
# The application layer: the panel render engine now (`app::Panel`), and the
# run-loop `Runtime` + its ports as the migration lands. Pure, host-testable.
app = { path = "../app" }
# The typoena.conf schema + parser (shared with the installer/wizard). The
# card's conf is read at boot and overrides the .env-baked TW_* per field —
# v0.9 onboarding slice 0. See ../conf and docs/v0.9-onboarding-wizard.md.
conf = { path = "../conf" }
# The onboarding wizard's host-tested state machine; src/wizard_io.rs is its
# hardware driver (keys in, panel out, Wi-Fi join test). Only the full build
# runs it (the wizard's end state is a clone), hence the feature gate below.
wizard = { path = "../wizard", optional = true }
git2 = { version = "0.20", default-features = false, optional = true }
# Already in the tree under git2 (same system-mode build); named directly for
# the raw `git_libgit2_opts` calls git2 doesn't wrap — the odb-cache cap
# (GIT_OPT_SET_CACHE_MAX_SIZE) and cache telemetry (GIT_OPT_GET_CACHED_MEMORY)
# the net thread sets against the run-4 push OOM (2026-07-13).
libgit2-sys = { version = "0.18", default-features = false, optional = true }
esp-idf-svc = { version = "0.52.1", features = [
  "critical-section",
  "embassy-time-driver",
  "embassy-sync",
] }
# Remove `generic-queue-8` if you plan to use `embassy-time` WITH `embassy-executor`
embassy-time = { version = "0.5", features = ["generic-queue-8"] }
embedded-graphics = "0.8"
# Traits shared with esp-idf-svc (Spike 6 uses `embedded_svc::http::Method`).
# Already in the tree via esp-idf-svc; pinned here so the spike names it directly.
embedded-svc = "0.29"

[build-dependencies]
embuild = "0.33"

# TEMPORARY — Spike 7 Path 2 Gate A probe. Builds libgit2 as an esp-idf
# component (see firmware/components/libgit2/). Compiled against on-disk source
# via LIBGIT2_SRC. Revert if the probe fails; promote (vendor the source) if it
# passes.
[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["components/libgit2"]
